--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
         <link id="icon" rel="icon" href="images/mtech.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/b93323df79.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="" type="text/css" href="css/style.css">
     </head>
     <body>
-        <div>
-            <a class="navItem" href="#">Home</a>
-            <a class="navItem" href="#">About</a>
-            <a class="navItem" href="#">Contact</a>
-        </div>
         <div id="contentContainer">
-            <h1>Template</h1>
-            <p>Template</p>
+            <div>guess the word you fleezebag</div>
+            <div id="guesses">
+                <input onkeydown="guess(this,1)" type="text" maxlength="1">
+                <input onkeydown="guess(this,2)" type="text" maxlength="1">
+                <input onkeydown="guess(this,3)" type="text" maxlength="1">
+                <input onkeydown="guess(this,4)" type="text" maxlength="1">
+                <input onkeydown="guess(this,5)" type="text" maxlength="1">
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script type="text/Javascript" src="js/main.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    
     </body>
 </html>
